Updated reqs to have extra index url first for streamlit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-streamlit>=1.36
-plotly>=5.20
-streamlit-image-select>=0.6.0
-streamlit-plotly-events>=0.0.6
-Pillow>=10.0
-numpy>=1.26
-opencv-python-headless>=4.10
-scipy>=1.11
+streamlit==1.38.0
+plotly==5.24.1
+streamlit-image-select==0.6.0
+streamlit-plotly-events==0.0.6
+Pillow==10.4.0
+numpy<2.0
+scipy==1.13.1
+opencv-python-headless==4.10.0.84
 
-# PyTorch (CPU wheels)
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.4.1
 torchvision==0.19.1
---extra-index-url https://download.pytorch.org/whl/cpu
