--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ plotly==5.24.1
 streamlit-image-select==0.6.0
 streamlit-plotly-events==0.0.6
 Pillow==10.4.0
-numpy<2.0
+numpy==2.1.3
 opencv-python-headless==4.10.0.84
 
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.4.1
-torchvision==0.19.1
+torch==2.5.1+cpu
+torchvision==0.20.1
